# edelib

./: .gitignore  .travis.yml  ChangeLog  INSTALL  INSTALL.md  Jamconfig.in  Jamfile  Jamrules  Makefile.am  README  README.md  TODO  autogen.sh  autogen.sh.jam  autogen.sh.make  configure.in  configure.in.make  edelib-config.in  edelib-dbus.pc.in  edelib-gui.pc.in  edelib.pc.in  edelib.supp  run-tests.sh
doc/: DBus.dox  Doxyfile  Doxyfile.in  Jamfile  Mainpage.dox  Theming.dox  design.dox  footer.html  gendoc.ss  genreadme  header.html  index.dox  style.css  todo.dox
edelib/: AnimateBox.h  Ask.h  Color.h  ColorDb.h  ComboBox.h  Config.h  DateTime.h  Debug.h  DesktopFile.h  Diagnose.h  DirWatch.h  Directory.h  EdbusConnection.h  EdbusContainer.h  EdbusData.h  EdbusDict.h  EdbusError.h  EdbusIntrospection.h  EdbusList.h  EdbusMessage.h  EdbusObjectPath.h  Ede.h  ExpandableGroup.h  File.h  FileTest.h  FontCache.h  FontChooser.h  ForeignCallback.h  Functional.h  IconChooser.h  IconLoader.h  IconTheme.h  Item.h  Jamfile  List.h  List.h.old  Listener.h  MenuBar.h  MenuBase.h  MenuButton.h  (+39 more)
edelib/ts/: opdefines.h  scheme-private.h  scheme.h
examples/: Jamfile  animate.cpp  animate.fl  dirwatch.cpp  dirwatch.fl  efile.cpp  egroup.cpp  egroup2.cpp  elinks.cpp  font_chooser.cpp  icon_chooser.cpp  icon_chooser.fl  list_view.cpp  menu.cpp  menu.fl  script_editor.cpp  sevenseg.cpp  sipc_client.cpp  sipc_server.cpp  theme.cpp  theme.fl  xsettings_client.cpp  xsettings_setter.cpp  xsettings_setter.fl
examples/theme-sample/: main.ewt  xxx.ewt
fl/: dialog.fl  dialog2.fl  font_chooser.fl  icon_chooser.fl
lib/: README
m4/: compiler-name.m4  cpp-varargs.m4  datetime.m4  dbus.m4  dmalloc.m4  dnotify.m4  findfile.m4  fltk.m4  initjamfile.m4  jam.m4  largefile.m4  libxpm.m4  mime.m4  nls.m4  notify.m4  pkg.m4  shared.m4  sound.m4  stl.m4  various.m4  xlib.m4
pc/: Jamfile  edelib-dbus.pc.in  edelib-gui-no-images.pc.in  edelib-gui.pc.in  edelib.pc.in
po/: Jamfile  edelib.pot  update-messages.sh  update-messages.sh.in
src/: AnimateBox.cpp  Ask.cpp  Color.cpp  ColorDb.cpp  ComboBox.cpp  Config.cpp  DateTime.cpp  Debug.c  Debug.cpp  DesktopFile.cpp  DirWatch.cpp  DirWatchDnotify.cpp  DirWatchFam.cpp  DirWatchGeneric.cpp  DirWatchInotify.cpp  Directory.cpp  EdbusConnection.cpp  EdbusData.cpp  EdbusDict.cpp  EdbusError.cpp  EdbusIntrospection.cpp  EdbusList.cpp  EdbusMessage.cpp  EdbusObjectPath.cpp  Ede.cpp  ExpandableGroup.cpp  File.cpp  FileTest.cpp  FontCache.cpp  FontChooser.cpp  ForeignCallback.cpp  IconChooser.cpp  IconLoader.cpp  IconTheme.cpp  Item.cpp  Jamfile  Listener.cpp  MenuBar.cpp  MenuBase.cpp  MenuButton.cpp  (+36 more)
src/icons/: critical.xpm  info.xpm  question.xpm  unknown-128.xpm  unknown-16.xpm  unknown-22.xpm  unknown-32.xpm  unknown-48.xpm  unknown-64.xpm  warning.xpm
src/rx/: regex.h  regex_internal.h  regexec.c
src/sdbm/: sdbm.h
src/tinyscheme/: gen-c-string.sh  init.scm  init_scm.h  scheme-private.h  scheme.c  scheme.h  theme.scm  theme_scm.h  utf8.h  while.scm
src/ts/: init.scm  init_scm.h  scheme.c  theme.scm  utf8.c
src/xdgmime/: tags  xdgmime.c  xdgmime.h  xdgmimeglob.c  xdgmimemagic.c
sslib/: Jamfile  demo.ss  doc.ss  gen-c-string.sh  include.ss  init-2.ss  init.ss  json.ss  lazy.ss  loops.ss  theme.ss
test/: Jamfile  UnitTest.cpp  UnitTest.h  Utest.h  abicheck.sh  color.cpp  colordb.cpp  conf.cpp  datetime.cpp  dbus.cpp  desktopfile.cpp  directory.cpp  ede.conf  file.cpp  file2.cpp  file_test.cpp  functional.cpp  list.cpp  mime.cpp  missing.cpp  regex.cpp  resource.cpp  run-all.sh  run.cpp  run.sh  run_tests.cpp  string.cpp  strutil.cpp  temp_file.cpp  test.desktop  test.xml  test_configlongline.txt  theme-bad.et  theme-bad2.et  theme.cpp  theme.et  utest.cpp  util.cpp  xml.cpp  xsettings.cpp
test/examples/: Jamfile  combobox.cpp  dirwatch.cpp  egroup.cpp  egroup2.cpp  elinks.cpp  font_chooser.cpp  icon_chooser.cpp  menuitems.cpp  sevenseg.fl  xsettings_client.cpp  xsettings_client.fl  xsettings_setter.cpp
test/old/: Jamfile  Utest.h
test/perf/: LinkedList.h  asciidoc.html  sort.cpp  speed.cpp  srun.sh  stringtok.cpp  stringtok.ss  strsplit.cpp  strsplit.h
test/scheme/: edelib.ss  r5rs.ss  run.sh  sslib.ss  test.ss  tiny-clos.ss  unittest.ss
test/scheme/parser/: 01.ss  02.ss  03.ss  04.ss
test/scheme/tiny-clos/: support.scm  tiny-clos.scm
test/scheme/units/: operators.ss  string.ss
test/scripts/: cdash-generate  min-elapsed.py  put.py
test/xdg/: Jamfile  README  icon-theme.cpp  icon-theme.py  run.sh
tools/: Jamfile  edelib-catchsegv  edelib-convert-icontheme  edelib-mime-find  edelib-mk-indextheme  geniconmap  mkindextheme  svg2png
tools/colors/: Jamfile
tools/edelib-dbus-explorer/: Default.h  Entity.cpp  Entity.h  Jamfile  ObjectTree.cpp  ObjectTree.h  ScriptDBus.cpp  ScriptDBus.h  ScriptEditor.cpp  ScriptEditor.h  content.ss  edelib-dbus-explorer.cpp  edelib-dbus-explorer.ss  edelib-dbus-explorer.txt  gen-help.sh  icons.h  ui.fl
tools/edelib-dbus-explorer/missing/: Fl_Tree.cpp  Fl_Tree_Item.cpp  Fl_Tree_Prefs.cpp
tools/edelib-dbus-explorer/missing/FL/: Fl_Tree.H  Fl_Tree_Item.H  Fl_Tree_Prefs.H
tools/edelib-dbus-introspect/: Jamfile  edelib-dbus-introspect.cpp
tools/edelib-dbus-xml2cpp/: Jamfile  edelib-dbus-xml2cpp.cpp
tools/edelib-script/: Jamfile  edelib-script.cpp
tools/edelib-theme-script/: Jamfile  baz.ss  doc.ss  edelib-theme-script.cpp  foo.ss  gen.ss  yasos.ss
tools/edelib-update-font-cache/: Jamfile  edelib-update-font-cache.cpp
tools/jam/: Makefile  execunix.c
